--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+annotated-types==0.7.0
 contourpy==1.3.3
 cycler==0.12.1
 fonttools==4.60.1
@@ -7,9 +8,13 @@ numpy==2.3.3
 packaging==25.0
 pandas==2.3.3
 pillow==11.3.0
+pydantic==2.12.3
+pydantic_core==2.41.4
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
 pytz==2025.2
 PyYAML==6.0.3
 six==1.17.0
+typing-inspection==0.4.2
+typing_extensions==4.15.0
 tzdata==2025.2
