--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,31 @@
 annotated-types==0.7.0
+choreographer==1.2.0
+colorama==0.4.6
 contourpy==1.3.3
 cycler==0.12.1
 fonttools==4.60.1
+iniconfig==2.3.0
+kaleido==1.1.0
 kiwisolver==1.4.9
+logistro==2.0.1
 matplotlib==3.10.7
+narwhals==2.10.1
 numpy==2.3.3
+orjson==3.11.4
 packaging==25.0
 pandas==2.3.3
 pillow==11.3.0
-pydantic==2.12.3
+plotly==6.3.1
+pluggy==1.6.0
 pydantic_core==2.41.4
+Pygments==2.19.2
 pyparsing==3.2.5
+pytest==8.4.2
+pytest-timeout==2.4.0
 python-dateutil==2.9.0.post0
 pytz==2025.2
 PyYAML==6.0.3
+simplejson==3.20.2
 six==1.17.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
