--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,49 @@
+absl-py==2.3.1
 annotated-types==0.7.0
+astunparse==1.6.3
+certifi==2025.11.12
+charset-normalizer==3.4.4
 choreographer==1.2.0
+click==8.3.1
 colorama==0.4.6
 contourpy==1.3.3
 coverage==7.11.0
 cycler==0.12.1
+flatbuffers==25.9.23
 fonttools==4.60.1
+gast==0.6.0
+google-pasta==0.2.0
+grpcio==1.76.0
+h5py==3.15.1
+idna==3.11
 iniconfig==2.3.0
+joblib==1.5.2
 kaleido==1.1.0
+keras==3.12.0
 kiwisolver==1.4.9
+libclang==18.1.1
 logistro==2.0.1
+Markdown==3.10
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
 matplotlib==3.10.7
+mdurl==0.1.2
+ml_dtypes==0.5.4
+mypy_extensions==1.1.0
+namex==0.1.0
 narwhals==2.10.1
 numpy==2.3.3
+opt_einsum==3.4.0
+optree==0.18.0
 orjson==3.11.4
 packaging==25.0
 pandas==2.3.3
+pathspec==0.12.1
 pillow==11.3.0
+platformdirs==4.5.0
 plotly==6.3.1
 pluggy==1.6.0
+protobuf==6.33.1
 pydantic_core==2.41.4
 Pygments==2.19.2
 pyparsing==3.2.5
@@ -25,10 +51,25 @@ pytest==8.4.2
 pytest-cov==7.0.0
 pytest-timeout==2.4.0
 python-dateutil==2.9.0.post0
+pytokens==0.3.0
 pytz==2025.2
 PyYAML==6.0.3
+requests==2.32.5
+rich==14.2.0
+scikit-learn==1.7.2
+scipy==1.16.3
+setuptools==80.9.0
 simplejson==3.20.2
 six==1.17.0
+tensorboard==2.20.0
+tensorboard-data-server==0.7.2
+tensorflow==2.20.0
+termcolor==3.2.0
+threadpoolctl==3.6.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.2
+urllib3==2.5.0
+Werkzeug==3.1.3
+wheel==0.45.1
+wrapt==2.0.1
